--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
+asgiref==3.2.7
 beautifulsoup4==4.9.1
 dj-database-url==0.5.0
-Django==2.1.15
+Django==3.0.6
 django-bootstrap-pagination==1.7.1
 django-bootstrap4==1.1.1
 gunicorn==20.0.4
 pytz==2020.1
 soupsieve==2.0.1
-whitenoise==4.0
+sqlparse==0.3.1
+whitenoise==5.1.0
 psycopg2
